--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="title_activity_building_search">BuildingSearchActivity</string>
     <string name="title_activity_events">EventsActivity</string>
     <string name="title_activity_maps">Map</string>
+    <string name="title_activity_my_class_maps">MyClassMapsActivity</string>
 </resources>
